--- a/HR_PerfID_Gugan.ipynb
+++ b/HR_PerfID_Gugan.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,11 +227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "emp_ds_l = pd.read_csv('human-resources-data-set/HRDataset_v13.csv')"
+    "emp_ds_l = pd.read_csv('HRDataset_v13.csv')"
    ]
   },
   {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -285,6 +285,377 @@
    ],
    "source": [
     "X, y = hr_prep.get_x_y_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>139</th>\n",
+       "      <th>140</th>\n",
+       "      <th>141</th>\n",
+       "      <th>142</th>\n",
+       "      <th>143</th>\n",
+       "      <th>144</th>\n",
+       "      <th>145</th>\n",
+       "      <th>146</th>\n",
+       "      <th>147</th>\n",
+       "      <th>148</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.181317</td>\n",
+       "      <td>-1.002786</td>\n",
+       "      <td>-2.079060</td>\n",
+       "      <td>2.039987</td>\n",
+       "      <td>2.356114</td>\n",
+       "      <td>0.784284</td>\n",
+       "      <td>-0.953088</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.539418</td>\n",
+       "      <td>1.294446</td>\n",
+       "      <td>0.120628</td>\n",
+       "      <td>1.188275</td>\n",
+       "      <td>0.268304</td>\n",
+       "      <td>0.773321</td>\n",
+       "      <td>-0.614261</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.148762</td>\n",
+       "      <td>0.440745</td>\n",
+       "      <td>1.220472</td>\n",
+       "      <td>1.614131</td>\n",
+       "      <td>0.268304</td>\n",
+       "      <td>0.767839</td>\n",
+       "      <td>-0.840145</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.637082</td>\n",
+       "      <td>-0.071476</td>\n",
+       "      <td>-0.979216</td>\n",
+       "      <td>1.188275</td>\n",
+       "      <td>-1.764249</td>\n",
+       "      <td>-1.413811</td>\n",
+       "      <td>-0.727203</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.958722</td>\n",
+       "      <td>1.294446</td>\n",
+       "      <td>-0.979216</td>\n",
+       "      <td>1.614131</td>\n",
+       "      <td>-0.079664</td>\n",
+       "      <td>0.784284</td>\n",
+       "      <td>-1.066030</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>305</td>\n",
+       "      <td>1.485482</td>\n",
+       "      <td>-1.383071</td>\n",
+       "      <td>1.220472</td>\n",
+       "      <td>2.891699</td>\n",
+       "      <td>0.268304</td>\n",
+       "      <td>0.630801</td>\n",
+       "      <td>2.999895</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>4.598136</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>306</td>\n",
+       "      <td>1.622211</td>\n",
+       "      <td>0.875357</td>\n",
+       "      <td>1.220472</td>\n",
+       "      <td>2.039987</td>\n",
+       "      <td>0.268304</td>\n",
+       "      <td>0.828136</td>\n",
+       "      <td>-0.840145</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>4.598136</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>307</td>\n",
+       "      <td>1.465949</td>\n",
+       "      <td>-0.048193</td>\n",
+       "      <td>0.120628</td>\n",
+       "      <td>1.614131</td>\n",
+       "      <td>-0.427632</td>\n",
+       "      <td>0.789765</td>\n",
+       "      <td>-0.501318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>4.598136</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>308</td>\n",
+       "      <td>1.413862</td>\n",
+       "      <td>1.294446</td>\n",
+       "      <td>-0.979216</td>\n",
+       "      <td>1.188275</td>\n",
+       "      <td>0.268304</td>\n",
+       "      <td>0.855544</td>\n",
+       "      <td>1.531644</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>4.598136</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>309</td>\n",
+       "      <td>1.557102</td>\n",
+       "      <td>-1.763356</td>\n",
+       "      <td>0.120628</td>\n",
+       "      <td>2.891699</td>\n",
+       "      <td>-0.079664</td>\n",
+       "      <td>0.669172</td>\n",
+       "      <td>0.063393</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.151994</td>\n",
+       "      <td>-0.217479</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.269563</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>-0.209215</td>\n",
+       "      <td>-0.276385</td>\n",
+       "      <td>4.598136</td>\n",
+       "      <td>-0.240874</td>\n",
+       "      <td>-0.269563</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>310 rows × 149 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5         6    \\\n",
+       "0   -0.181317 -1.002786 -2.079060  2.039987  2.356114  0.784284 -0.953088   \n",
+       "1   -0.539418  1.294446  0.120628  1.188275  0.268304  0.773321 -0.614261   \n",
+       "2   -0.148762  0.440745  1.220472  1.614131  0.268304  0.767839 -0.840145   \n",
+       "3   -0.637082 -0.071476 -0.979216  1.188275 -1.764249 -1.413811 -0.727203   \n",
+       "4   -0.958722  1.294446 -0.979216  1.614131 -0.079664  0.784284 -1.066030   \n",
+       "..        ...       ...       ...       ...       ...       ...       ...   \n",
+       "305  1.485482 -1.383071  1.220472  2.891699  0.268304  0.630801  2.999895   \n",
+       "306  1.622211  0.875357  1.220472  2.039987  0.268304  0.828136 -0.840145   \n",
+       "307  1.465949 -0.048193  0.120628  1.614131 -0.427632  0.789765 -0.501318   \n",
+       "308  1.413862  1.294446 -0.979216  1.188275  0.268304  0.855544  1.531644   \n",
+       "309  1.557102 -1.763356  0.120628  2.891699 -0.079664  0.669172  0.063393   \n",
+       "\n",
+       "     7    8    9    ...       139       140       141       142       143  \\\n",
+       "0    0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "1    0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "2    0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "3    0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "4    0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "..   ...  ...  ...  ...       ...       ...       ...       ...       ...   \n",
+       "305  0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "306  0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "307  0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "308  0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "309  0.0  0.0  0.0  ... -0.151994 -0.217479 -0.276385 -0.269563 -0.276385   \n",
+       "\n",
+       "          144       145       146       147       148  \n",
+       "0   -0.209215 -0.276385 -0.217479 -0.240874 -0.269563  \n",
+       "1   -0.209215 -0.276385 -0.217479 -0.240874 -0.269563  \n",
+       "2   -0.209215 -0.276385 -0.217479 -0.240874 -0.269563  \n",
+       "3   -0.209215 -0.276385 -0.217479 -0.240874 -0.269563  \n",
+       "4   -0.209215 -0.276385 -0.217479 -0.240874 -0.269563  \n",
+       "..        ...       ...       ...       ...       ...  \n",
+       "305 -0.209215 -0.276385  4.598136 -0.240874 -0.269563  \n",
+       "306 -0.209215 -0.276385  4.598136 -0.240874 -0.269563  \n",
+       "307 -0.209215 -0.276385  4.598136 -0.240874 -0.269563  \n",
+       "308 -0.209215 -0.276385  4.598136 -0.240874 -0.269563  \n",
+       "309 -0.209215 -0.276385  4.598136 -0.240874 -0.269563  \n",
+       "\n",
+       "[310 rows x 149 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
    ]
   },
   {
